Edit row overflow fix

--- a/wp-content/plugins/RisiriWidget/classes/table/table.css
+++ b/wp-content/plugins/RisiriWidget/classes/table/table.css
@@ -281,6 +281,7 @@ body{
 .fulltable-editing td{
     background-color: #9F9F9F;
     height: 45px;
+    max-height: none;
 }
 .fulltable-editing input[type="text"]{
     color: #fff;
